# NutriPal

./: .env.example  .gitignore  .replit  README.md  journal-implementation-guide.md  package-lock.json  package.json  pyproject.toml  replit.md
UI_GLASS/: Elements_library.md  Native_Bottom_Tabs_Navigator.md  Native_Stack_Navigator.md  Stack_Expo_Doc.md  SwiftUI.md  animations.md
ai-backend/: .env.example  package-lock.json  package.json  tsconfig.json
attached_assets/: Pasted--DOCTYPE-html-html-lang-en-head-title-Hmm-We-couldn-39-_1775273318429.txt  Pasted--runtime-not-ready-Error-Cannot-find-native-module-Expo_1775273724397.txt  Pasted--runtime-not-ready-Error-EXPO-PUBLIC-CREATE-LD-MOBILE-K_1775274140760.txt  (+3 more)
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/api/middleware/: __init__.py  cors.py  ratelimit.py
backend/api/routes/: health.py  image.py  text.py
backend/data/: densities.json  taco.json
backend/data/weights/: README.md
backend/models/: enums.py  schemas.py
backend/pipeline/: __init__.py  orchestrator.py
backend/pipeline/depth/: __init__.py  depth_estimator.py  volume_calculator.py
backend/pipeline/detection/: __init__.py  yolo_detector.py
backend/pipeline/nutrition/: __init__.py  dataset_lookup.py  density_table.py  llm_enricher.py
backend/pipeline/segmentation/: __init__.py  sam2_segmenter.py
backend/pipeline/text/: __init__.py  haiku_parser.py  router.py  sonnet_parser.py
backend/tests/: test_text_parser.py  test_vision_pipeline.py
frontend/: .env.example  index.html  package-lock.json  package.json  (+3 more)
(+174 files in other folders)
