[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.10.0",
    "pillow>=11.0.0",
    "pydantic>=2.10.0",
    "pytest>=8.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.12",
    "rapidfuzz>=3.10.0",
    "uvicorn[standard]>=0.32.0",
]
